# EDA_challenge

./: .run.sh.swp  CMakeLists.txt  README.md  run.sh
ai_infra/: acquisition_functions.py  bayesian_optimization.py  gaussian_model.py  imap_engine.py  main.py  output.py  ssk_kernels.py  utility.py
ai_infra/GA/: get_node_by_command.py  initial_node.py  initial_node_2.py  main.py  read_initial_node.py  read_node_2.py  teat.py  test.py
ai_infra/get_data/: get_data.py  get_data_another_way.py  get_data_by_command.py  get_initial_node_another_way.py  get_initial_nodes.py  get_node_by_command.py  get_stats.py  output.txt
algorithm/: CMakeLists.txt  cache.hpp  imap.hpp
benchmark/: README.md  run_case.sh
benchmark/C1908.iscas_comb/: ref_qor.txt
benchmark/C499.iscas_comb/: ref_qor.txt
benchmark/C6288.iscas_comb/: ref_qor.txt
benchmark/C880.iscas_comb/: ref_qor.txt
benchmark/ac97_ctrl_comb/: ref_qor.txt
benchmark/adder/: adder.aig.seq
benchmark/aes_core_comb/: ref_qor.txt
benchmark/apex7_comb/: ref_qor.txt
benchmark/arbiter/: ref_qor.txt
benchmark/b03_comb/: ref_qor.txt
benchmark/b04_comb/: ref_qor.txt
benchmark/b05_comb/: ref_qor.txt
benchmark/b07_comb/: ref_qor.txt
benchmark/b10_comb/: ref_qor.txt
benchmark/b14_1_comb/: ref_qor.txt
benchmark/b15_comb/: ref_qor.txt
benchmark/b17_1_comb/: ref_qor.txt
benchmark/b18_comb/: ref_qor.txt
cli/: imap.cpp
examples/: CMakeLists.txt  balance.cpp  refactor.cpp  rewrite.cpp
output/: 1.txt  b03_comb_seq.txt  result.txt
script/: run_abc_list.sh  run_imap_list.sh
test_output/: b03_comb.seq
(+97 files in other folders)
